--- a/multiple.yaml
+++ b/multiple.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
- name: multiple-containers
-spec: 
-containers:
- name: nginx
- image: nginx
- name: almalinux
- image: almalinux:9
+  name: nginx
+spec:
+  containers:
+  - name: nginx
+    image: nginx
+  - name: alma
+    image: almalinux:9
+    command: "sleep 1000"
